--- a/templates/board/update.html
+++ b/templates/board/update.html
@@ -34,6 +34,14 @@
                             <input type="file" name="mos_up">
                         </dd>
                     </dl>
+                    <dl>
+                        <dt>모자이크 형식</dt>
+                        <dd>
+                            <input type="radio" name="type" value="harr" checked>기본 모자이크
+                            <input type="radio" name="type" value="shuffle">이미지 섞기
+                            <input type="radio" name="type" value="faceShuffle">얼굴 섞기
+                        </dd>
+                    </dl>
                 </div>
                 <div class="cont">
                     <textarea placeholder="내용 입력" name="board_content">
