--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,31 +1,40 @@
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" style="cursor:default">Mosaic The Face</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'list' %}">Board</a>
-          </li>
+        <a class="navbar-brand" style="cursor:default">Mosaic The Face</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'list' %}">Board</a>
+                </li>
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'my_list' %}">작성글</a>
+                </li>
+                {% endif %}
 
 
+            </ul>
+            <form class="btn btn-primary">
 
-        </ul>
-        <form class="btn btn-primary">
-
-            {% if user.is_authenticated %}
-            <button type="button" class="btn btn-primary" onclick="location.href='{% url 'mypage' %}'">Mypage</button>
-            <button type="button" class="btn btn-primary" onclick="location.href='{% url 'logout' %}'">log out</button>
-            {% else %}
-            <button type="button" class="btn btn-primary" onclick="location.href='{% url 'signup' %}'">sign up</button>
-            <button type="button" class="btn btn-primary" onclick="location.href='{% url 'login' %}'">log in</button>
-            {% endif %}
-        </form>
-      </div>
+                {% if user.is_authenticated %}
+                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'mypage' %}'">Mypage
+                </button>
+                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'logout' %}'">log out
+                </button>
+                {% else %}
+                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'signup' %}'">sign up
+                </button>
+                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'login' %}'">log in
+                </button>
+                {% endif %}
+            </form>
+        </div>
     </div>
-  </nav>
+</nav>
